Consume mouse release for back/foward buttons

In order to prevent duplicate handling of mouse back/forward buttons,
consume both mouse_pressed and mouse_released events in
BrowserCommandHandlerLinux.

BUG=chromium:821253
TEST=manual testing on chromeOS

Change-Id: I47c7b262ca7bd60da463580ba40a11dc46ca323e
Reviewed-on: https://chromium-review.googlesource.com/982500
Commit-Queue: Sean O'Brien <seobrien@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546628}
Former-commit-id: fdd5c082f0d5ec699a8146126d54c57f12af65c6